@@ -11,9 +11,6 @@ syncLimit=5
 # dataDir=/opt/zookeeper/data
 # NOTE: Solr defaults the dataDir to <solrHome>/zoo_data
 
-# the address that embedded zookeeper will bind to
-clientPortAddress=127.0.0.1
-
 # the port at which the clients will connect
 # clientPort=2181
 # NOTE: Solr sets this based on zkRun / zkHost params
